# hello-travis-appveyor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  install.ps1  install.sh  install_dependencies.ps1  install_dependencies.sh  main.cpp  updater.ps1  updater.sh
utils/Linux/: get_latest_binary.sh
utils/Windows/: get_latest_binary.ps1
